[package]
name = "typst-ansi-web"
version = "0.1.0"
edition = "2021"
authors = ["PgBiel <https://github.com/PgBiel>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
typst-ansi-hl = "0.2.0"
wasm-bindgen = "0.2.100"
